styles.css
body {
    background-color: grey;
    font-family: sans-serif;
    padding: 20px;
}
h1, h2, h3, h4, p {
    text-align: left;
    line-height: 20px;
}
h1, h2 {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
h1 {
    font-size: 40px;
    margin-top: 0;
    margin-bottom: 15px;
}
  
  h2 {
    font-size: 24px;
    margin-top: 0;
    margin-bottom: 10px;
}
h3 {
    font-size: 22px;
    margin-top: 0;
    margin-bottom: 5px;
}
h4 {
    font-size: 20px;
    margin-top: 0;
    margin-bottom: 5px;
}

p {
    font-size: 18px;
    margin-top: 0;
    margin-bottom: 5px;
}

ul li {
    font-size: 18px;
    margin-top: 0;
    margin-bottom: 5px;
}

.menu {
    width: 80%;
    background-color: whitesmoke;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    max-width: 1000px;
}
img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -25px;
}
hr {
    height: 2px;
    background-color: green;
    border-color: green;
}
.bottom-line {
    margin-top: 25px;
}
.item p {
    display: inline-block;
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 18px;
}

/* FOOTER */
footer {
    font-size: 14px;
}
.address {
    margin-bottom: 5px;
}
a {
    color: black;
}
a:visited {
    color: black;
  }
  a:hover {
    color: green;
  }
  a:active {
    color: greenyellow;
  }

